# Eagle

./: .env.example  .gitignore  README.md  pyproject.toml  run_btc_bot.py
config/: default.yaml
data/: learned_weights.json
eagle/: __init__.py  btc_bot.py  btc_console.py  cli.py
eagle/backtest/: __init__.py  engine.py
eagle/core/: __init__.py  config.py  engine.py  events.py
eagle/data/: __init__.py  binance_ws.py  fetcher.py  kraken_ws.py
eagle/display/: __init__.py  live_dashboard.py
eagle/execution/: __init__.py  engine.py  paper_account.py
eagle/features/: __init__.py  engineer.py
eagle/indicators/: __init__.py  realtime_calculator.py  technical.py
eagle/learning/: __init__.py  trade_journal.py  weight_adapter.py
eagle/risk/: __init__.py  manager.py  portfolio.py
eagle/strategies/: __init__.py  manager.py
eagle/strategies/realtime/: __init__.py  aggregator.py  base.py  bollinger_strategy.py  ema_strategy.py  macd_strategy.py  rsi_strategy.py
eagle/utils/: __init__.py  logger.py
